--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>
-  {{title}}
-</h1>
+<navbar></navbar>
+<!-- <router-outlet></router-outlet> -->
+  <div class="container">
+  <router-outlet></router-outlet>
+</div>
